--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+@import "tailwindcss";
+
+body {
+  font-family: outfit;
+  background-color: #000000;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+
